# CP-Solutions

./: .autocp  CMakeLists.txt
CodeForce/: Bear_and_Big_Brother.cpp  Elephant.cpp  Football.cpp  Soldie_and_Bananas.cpp  Stones_on_the_table.cpp  String_Task.cpp  Theatre_Square.cpp  Way_Too_Long_Words.cpp  Word.cpp  Word_Capitalization.cpp  Wrong_Subtraction.cpp  Young_Physicist.cpp
