cmake_minimum_required(VERSION 3.30)
project(CP_Solution)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp
        CodeForce/Way_Too_Long_Words.cpp
        CodeForce/Theatre_Square.cpp
        CodeForce/Word_Capitalization.cpp
        CodeForce/Bear_and_Big_Brother.cpp
        CodeForce/Stones_on_the_table.cpp
        CodeForce/String_Task.cpp
        CodeForce/Elephant.cpp)